tests/rosetta/out/Java/barnsley-fern.error
javac error: exit status 1
/tmp/TestMochiToJavabarnsley-fern2761734039/001/BarnsleyFern.java:24: error: incompatible types: double cannot be converted to String
    int height = Integer.parseInt((width * dy / dx));
                                              ^
/tmp/TestMochiToJavabarnsley-fern2761734039/001/BarnsleyFern.java:40: error: incompatible types: double cannot be converted to String
    int ix = Integer.parseInt(((Double.parseDouble(String.valueOf(width))) * (x - xMin) / dx));
                                                                                        ^
/tmp/TestMochiToJavabarnsley-fern2761734039/001/BarnsleyFern.java:41: error: incompatible types: double cannot be converted to String
    int iy = Integer.parseInt(((Double.parseDouble(String.valueOf(height))) * (yMax - y) / dy));
                                                                                         ^
/tmp/TestMochiToJavabarnsley-fern2761734039/001/BarnsleyFern.java:49: error: incompatible types: Integer cannot be converted to List<Integer>
        List<Integer> r = res.get(1);
                                 ^
/tmp/TestMochiToJavabarnsley-fern2761734039/001/BarnsleyFern.java:50: error: bad operand types for binary operator '<'
        if (r < 85) {
              ^
  first type:  List<Integer>
  second type: int
/tmp/TestMochiToJavabarnsley-fern2761734039/001/BarnsleyFern.java:56: error: incompatible types: double cannot be converted to String
        ix = (int)(Integer.parseInt(((Double.parseDouble(String.valueOf(width))) * (x - xMin) / dx)));
                                                                                              ^
/tmp/TestMochiToJavabarnsley-fern2761734039/001/BarnsleyFern.java:57: error: incompatible types: double cannot be converted to String
        iy = (int)(Integer.parseInt(((Double.parseDouble(String.valueOf(height))) * (yMax - y) / dy)));
                                                                                               ^
Note: /tmp/TestMochiToJavabarnsley-fern2761734039/001/BarnsleyFern.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
7 errors
